--- a/templates/index.html
+++ b/templates/index.html
@@ -36,5 +36,6 @@
       <li>No tasks available.</li>
       {{end}}
     </div>
+    <script src="/static/filter-out-todo-from-dom.js"></script>
   </body>
 </html>
