--- a/templates/todo.html
+++ b/templates/todo.html
@@ -1,6 +1,10 @@
 {{define "todo"}}
 
-<li class="text-slate-950 bg-slate-300 p-2">
+<li
+  class="text-slate-950 bg-slate-300 p-2"
+  data-id="{{.ID}}"
+  hx-on="htmx:after-swap: setTimeout(() => this.remove(), 1000)"
+>
   <span {{if .Done}} style="text-decoration: line-through" {{end}}
     >{{.Task}}</span
   >
@@ -9,15 +13,17 @@
     class="bg-yellow-200 rounded p-1"
     hx-target="#form-section"
     hx-get="/get-update-form/{{.ID}}"
+    hx-on::after-request="filterOutTodoFromDom({{.ID}})"
     >Update</a
   >
   |
   <a
     href="#"
     class="bg-red-100 rounded p-1"
-    hx-delete="/tasks/{{.ID}}"
+    hx-delete="/todo/{{.ID}}"
     hx-confirm="Are you sure you want to Delete this Task?"
-    hx-target="#taskList"
+    hx-target="[data-id='{{.ID}}']"
+    hx-swap="innerHTML"
     >Delete</a
   >
 </li>
